@@ -2,6 +2,10 @@ Changes with Apache 2.1.2-dev
 
   [Remove entries to the current 2.0 section below, when backported]
 
+  *) core: Error out on sections that are missing an argument instead of
+     silently consuming the section. PR 25460.
+     [Geoffrey Young, Paul Querna]
+
   *) mod_cache/mod_mem_cache/mod_disk_cache: Move out of experimental.
 
   *) Upgraded PCRE to version 5.0. [Brian Pane]
